flush del giorno

--- a/01-links/team-inspire/web/recomendations/fragments/ace-ventura.html
+++ b/01-links/team-inspire/web/recomendations/fragments/ace-ventura.html
@@ -1,7 +1,7 @@
 <h1 class="text-white text-xl uppercase">Puoi anche vedere:</h1>
 
 <div class="p-2">
-    <a href="http://localhost:90/ace-ventura.html" target="_parent">
+    <a href="/films/ace-ventura.html">
         <img src="https://m.media-amazon.com/images/M/MV5BMzc2NDMzNDY4Ml5BMl5BanBnXkFtZTYwNzM2Njk3._V1_SX300.jpg"
              class="w-32 rounded-lg shadow-lg"/>
         <div class="text-gray-300 text-center mt-3">
